more text stroke

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     
     <div class="wrapper">
-        <h1>Text Stroke</h1>
+        <h1 class="text1">LINE 1</h1>
+        <h1 class="text2">LINE 2</h1>
+        <h1 class="text3">LINE 3</h1>
     </div>
 
 </body>
