more text stroke

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1 class="text1">LINE 1</h1>
         <h1 class="text2">LINE 2</h1>
         <h1 class="text3">LINE 3</h1>
+        <h1 class="text4">LINE 4</h1>
+        <h1 class="text5">LINE 5</h1>
     </div>
 
 </body>
